# ai-chatbot-workshop

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: agentic_chat.py  agentic_langchain.py  basic_chat.py  memory_chat.py  rag_chat.py
exercises/00_environment_setup/: 0a_python_check.py  0b_poetry_install.py  0c_dependencies.py  0d_download_model.py
exercises/01_basic_chatbot/: 1a_basic_chatbot.py  1b_system_prompt.py  README.md
exercises/01_basic_chatbot/solutions/: 1b_system_prompt.py
exercises/01_extend_memory/: README.md
exercises/02_add_tools/: README.md
exercises/02_conversation_memory/: 2a_no_memory.py  2b_memory.py  2c_memory_strategies.py  2d_summarize_memory.py  README.md
exercises/02_conversation_memory/solutions/: 2b_memory.py  2c_memory_strategies.py  2d_summarize_memory.py
exercises/03_agents_and_tools/: 3a_multi_agentic_system.py  3b_tools_and_orchestration.py  README.md  tools.py
exercises/03_agents_and_tools/solutions/: 3b_tools_and_orchestration.py
exercises/03_custom_prompting/: README.md
exercises/03_retrieval_augmented_generation/: 3a_keyword_search.py  3b_semantic_search.py  3c_hybrid_search.py  README.md
exercises/04_agents_and_tools/: 4a_simple_agent.py  4b_add_tool.py  4c_tool_chaining.py  README.md
exercises/SOLUTIONS/: 1b_system_prompt.py  2b_memory.py  2c_memory_strategies.py  2d_summarize_memory.py  3b_tools_and_orchestration.py  4b_add_tool.py  4c_hybrid_search.py  4c_tool_chaining.py  README.md
notebooks/: 00_install_and_setup.ipynb  01_basic_inference.ipynb  02_memory_and_agentic.ipynb
scripts/: download_model.py
src/chatbot/: __init__.py  agent.py  chat_utils.py  chatbot.py  config.py  intent_classifier.py  langchain_adapter.py  memory.py  model_loader.py  prompts.py  rag.py  text_generator.py  tool.py
src/utils/: __init__.py  logging_utils.py  prompts.py
