[tool.poetry]
name = "ai-chatbot"
version = "0.1.0"
description = "Educational scaffold for a local AI chatbot workshop"
readme = "README.md"
authors = ["Ester Jara"]
license = "MIT"
packages = [{include = "chatbot", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
python-dotenv = "*"
llama-cpp-python = "*"
requests = "*"
huggingface-hub = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
